<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_preferences"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_refresh" 
        android:title="@string/refresh"
        android:orderInCategory="101"
        android:showAsAction="always" 
        android:icon="@drawable/ic_menu_refresh" />
    
    <item android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:icon="@drawable/ic_menu_logout" />
    
    <item android:id="@+id/menu_about"
        android:title="@string/about"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:icon="@drawable/ic_menu_info_details" />
</menu>
