<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/tfUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:imeOptions="flagNavigateNext" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoginTapped"
        android:text="@string/login" />

    <CheckBox
        android:id="@+id/cbxStayLoggedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_logged_in"
        android:checked="true" />

</LinearLayout>